sales changes
